@@ -22,7 +22,7 @@ import org.jboss.shrinkwrap.api.asset.StringAsset;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.RegisterExtension;
 
-import io.quarkus.test.QuarkusUnitTest;
+import io.quarkus.test.QuarkusExtensionTest;
 import io.smallrye.config.ConfigMapping;
 import io.smallrye.config.ConfigValue;
 import io.smallrye.config.SmallRyeConfig;
@@ -33,7 +33,7 @@ import io.smallrye.config.WithParentName;
 
 public class ConfigMappingTest {
     @RegisterExtension
-    static final QuarkusUnitTest TEST = new QuarkusUnitTest()
+    static final QuarkusExtensionTest TEST = new QuarkusExtensionTest()
             .withApplicationRoot((jar) -> jar
                     .addAsResource(new StringAsset("config.my.prop=1234\n" +
                             "config.override.my.prop=5678\n" +
@@ -64,7 +64,6 @@ public class ConfigMappingTest {
                             "override.server.host=localhost\n" +
                             "override.server.port=8080\n" +
                             "cloud.server.host=cloud\n" +
-                            "cloud.server.port=9000\n" +
                             "cloud.server.port=9000\n" +
                             "hierarchy.foo=bar"),
                             "application.properties"));
@@ -303,7 +302,7 @@ public class ConfigMappingTest {
         assertEquals("bar", defaults.bar());
         assertEquals("foo", config.getValue("defaults.foo", String.class));
 
-        List<String> propertyNames = stream(config.getPropertyNames().spliterator(), false).collect(toList());
+        List<String> propertyNames = stream(config.getPropertyNames().spliterator(), false).toList();
         assertTrue(propertyNames.contains("defaults.foo"));
     }
 
