@@ -20,6 +20,7 @@ import jakarta.ws.rs.ext.Providers;
 import jakarta.ws.rs.ext.RuntimeDelegate;
 
 import org.jboss.jandex.AnnotationTarget;
+import org.jboss.jandex.AnnotationTransformation;
 import org.jboss.jandex.ClassInfo;
 import org.jboss.jandex.CompositeIndex;
 import org.jboss.jandex.DotName;
@@ -97,7 +98,7 @@ public class ResteasyReactiveCommonProcessor {
             return;
         }
         List<ResolvedDependency> resteasyClassicDeps = curateOutcomeBuildItem.getApplicationModel().getDependencies().stream()
-                .filter(d -> d.getGroupId().equals("org.jboss.resteasy")).collect(Collectors.toList());
+                .filter(d -> d.getGroupId().equals("org.jboss.resteasy")).toList();
         boolean hasResteasyCoreDep = resteasyClassicDeps.stream()
                 .anyMatch(IS_NOT_TEST_SCOPED.and(IS_RESTEASY_CLASSIC_CORE_DEP));
         if (!hasResteasyCoreDep) {
@@ -126,8 +127,11 @@ public class ResteasyReactiveCommonProcessor {
             // in this weird case we don't want the providers to be registered automatically as this would lead to multiple bean definitions
             return;
         }
-        // TODO: should we also be looking for the specific provider files?
         producer.produce(new AdditionalApplicationArchiveMarkerBuildItem(PROVIDERS_SERVICE_FILE));
+        producer.produce(new AdditionalApplicationArchiveMarkerBuildItem(
+                "META-INF/services/" + jakarta.ws.rs.core.Feature.class.getName()));
+        producer.produce(new AdditionalApplicationArchiveMarkerBuildItem(
+                "META-INF/services/" + jakarta.ws.rs.container.DynamicFeature.class.getName()));
     }
 
     @BuildStep
@@ -159,7 +163,7 @@ public class ResteasyReactiveCommonProcessor {
     @BuildStep
     public ResourceInterceptorsContributorBuildItem scanForIOInterceptors(CombinedIndexBuildItem combinedIndexBuildItem,
             ApplicationResultBuildItem applicationResultBuildItem) {
-        return new ResourceInterceptorsContributorBuildItem(new Consumer<ResourceInterceptors>() {
+        return new ResourceInterceptorsContributorBuildItem(new Consumer<>() {
             @Override
             public void accept(ResourceInterceptors interceptors) {
                 ResteasyReactiveInterceptorScanner.scanForIOInterceptors(interceptors,
@@ -214,19 +218,19 @@ public class ResteasyReactiveCommonProcessor {
         if (priority != null) {
             interceptor.setPriority(priority);
         }
-        if (filterItem instanceof ContainerRequestFilterBuildItem) {
-            ContainerRequestFilterBuildItem crfbi = (ContainerRequestFilterBuildItem) filterItem;
+        if (filterItem instanceof ContainerRequestFilterBuildItem crfbi) {
             interceptor.setNonBlockingRequired(crfbi.isNonBlockingRequired());
             interceptor.setWithFormRead(crfbi.isWithFormRead());
             MethodInfo filterSourceMethod = crfbi.getFilterSourceMethod();
             if (filterSourceMethod != null) {
                 interceptor.metadata = Map.of(FILTER_SOURCE_METHOD_METADATA_KEY, filterSourceMethod);
             }
-        } else if (filterItem instanceof ContainerResponseFilterBuildItem) {
-            MethodInfo filterSourceMethod = ((ContainerResponseFilterBuildItem) filterItem).getFilterSourceMethod();
+        } else if (filterItem instanceof ContainerResponseFilterBuildItem crfbi) {
+            MethodInfo filterSourceMethod = crfbi.getFilterSourceMethod();
             if (filterSourceMethod != null) {
                 interceptor.metadata = Map.of(FILTER_SOURCE_METHOD_METADATA_KEY, filterSourceMethod);
             }
+            interceptor.setCancellable(crfbi.isCancellable());
         }
         if (interceptors instanceof PreMatchInterceptorContainer
                 && ((ContainerRequestFilterBuildItem) filterItem).isPreMatching()) {
@@ -304,9 +308,10 @@ public class ResteasyReactiveCommonProcessor {
             return;
         }
         if (!res.getResourcesThatNeedCustomProducer().isEmpty()) {
+            AnnotationTransformation transformation = new VetoingAnnotationTransformer(
+                    res.getResourcesThatNeedCustomProducer().keySet());
             annotationsTransformerBuildItemBuildProducer
-                    .produce(new AnnotationsTransformerBuildItem(
-                            new VetoingAnnotationTransformer(res.getResourcesThatNeedCustomProducer().keySet())));
+                    .produce(new AnnotationsTransformerBuildItem(transformation));
         }
         resourceScanningResultBuildItemBuildProducer.produce(new ResourceScanningResultBuildItem(res));
     }
